# codex-pet-limit-rings-rs

./: .gitignore  AGENTS.md  Cargo.toml  NOTICE.md  README.md  SECURITY.md
.github/workflows/: windows-rust.yml
docs/: limit-rings.md  release-checklist.md  windows-limit-rings.md
skills/codex-pet-limit-rings/: SKILL.md
skills/codex-pet-limit-rings/agents/: openai.yaml
src/: main.rs  windows_app.rs
tools/: install-codex-skill.ps1  install-limit-rings.ps1  run-limit-rings.ps1  uninstall-limit-rings.ps1  verify-limit-rings.ps1
tools/rust/: Cargo.toml
tools/rust/src/: main.rs
