[package]
name = "codex-pet-limit-rings"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Windows companion overlay that draws Codex usage-limit rings around the current Codex pet."
publish = false

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = "z"
panic = "abort"
strip = "symbols"

[target.'cfg(windows)'.dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
serde_json = "1"
tiny-skia = { version = "0.11", default-features = false, features = ["std", "png-format"] }
ureq = "2"
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_System_LibraryLoader",
  "Win32_System_ProcessStatus",
  "Win32_System_Threading",
  "Win32_UI_HiDpi",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging"
] }
